fixed gap issues in left buttons

--- a/static/style.css
+++ b/static/style.css
@@ -82,7 +82,7 @@ pre {
   font-size: 1.5rem;
 }
 .leftbuttons {
-    gap: 20;
+    gap: 1rem;
     margin-left: 5vw;
     display: flex;
     flex-direction: row;
